<resources>
    <string name="app_name">Gallery</string>

    <string name="debug_activity_databinding_warning">Debug 提示：此 Activity 未遵循 DataBinding 严格模式，存在 视图调用的 Null 安全风险</string>
    <string name="debug_fragment_databinding_warning">Debug 提示：此 Fragment 未遵循 DataBinding 严格模式，存在 视图调用的 Null 安全风险</string>
    <string name="network_not_good">network not good</string>
    <string name="wallpaper">wallpaper</string>
    <string name="music">music</string>
    <string name="downloads">downloads</string>
    <string name="setting">setting</string>
    <string name="watch_mv">watch mv</string>
    <string name="menu">menu</string>
    <string name="play">play</string>
    <string name="back">back</string>
    <string name="album_cover">album cover</string>
    <string name="music_library">Music library</string>
    <string name="album">album</string>
    <string name="video">video</string>
    <string name="image">image</string>
    <string name="sort">sort</string>
    <string name="sort_type">Sort type</string>
    <string name="created_time">Created time</string>
    <string name="separator_text">------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</string>
    <string name="separated_by_time">separated by time</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="edited_time">Edited time</string>
    <string name="descending_order">Descending order</string>
    <string name="ascending_order">Ascending order</string>
    <string name="accessed_time">Accessed time</string>
    <string name="next">next</string>
    <string name="list">list</string>
    <string name="player_background">player background</string>
    <string name="slider">separator</string>
</resources>