<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.example.gallery.main.model.AlbumSortModel"/>
        <import type="com.example.gallery.media.local.enums.SortType"/>
        <variable
                name="sortModel"
                type="AlbumSortModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@drawable/bg_top_corner_16"
            android:paddingHorizontal="16dp"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:text="@string/sort_type"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginVertical="24dp"/>

        <RadioGroup
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginVertical="16dp"
                android:id="@+id/radio_group_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    android:textSize="18sp"
                    android:checked="@{sortModel.sortType == SortType.CREATED}"
                    android:onClick="@{() -> sortModel.setSortType(SortType.CREATED)}"
                    android:buttonTint="?attr/colorOnPrimary"
                    android:textColor="?attr/colorOnPrimary"
                    android:id="@+id/radio_created"
                    android:text="@string/created_time"/>

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    android:checked="@{sortModel.sortType == SortType.EDITED}"
                    android:onClick="@{() -> sortModel.setSortType(SortType.EDITED)}"
                    android:id="@+id/radio_edited"
                    android:textSize="18sp"
                    android:buttonTint="?attr/colorOnPrimary"
                    android:textColor="?attr/colorOnPrimary"
                    android:text="@string/edited_time"/>

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    android:checked="@{sortModel.sortType == SortType.ACCESSED}"
                    android:onClick="@{() -> sortModel.setSortType(SortType.ACCESSED)}"
                    android:id="@+id/radio_accessed"
                    android:textSize="18sp"
                    android:buttonTint="?attr/colorOnPrimary"
                    android:textColor="?attr/colorOnPrimary"
                    android:text="@string/accessed_time"/>
        </RadioGroup>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/radio_group_sort"
                android:textColor="@color/gray_500"
                android:lines="1"
                android:text="@string/separator_text"/>

        <RadioGroup
                app:layout_constraintTop_toBottomOf="@id/radio_group_sort"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginVertical="20dp"
                android:id="@+id/radio_group_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    android:textSize="18sp"
                    android:checked="@={sortModel.descending}"
                    android:buttonTint="?attr/colorOnPrimary"
                    android:textColor="?attr/colorOnPrimary"
                    android:id="@+id/radio_descending"
                    android:text="@string/descending_order"/>

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    android:id="@+id/radio_ascending"
                    android:buttonTint="?attr/colorOnPrimary"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="18sp"
                    android:checked="@={!sortModel.descending}"
                    android:text="@string/ascending_order"/>
        </RadioGroup>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/radio_group_order"
                android:textColor="@color/gray_500"
                android:lines="1"
                android:text="@string/separator_text"/>

        <LinearLayout
                app:layout_constraintTop_toBottomOf="@id/radio_group_order"
                android:layout_marginVertical="12dp"
                android:id="@+id/switch_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <com.google.android.material.switchmaterial.SwitchMaterial
                    android:layout_gravity="end"
                    android:textSize="18sp"
                    android:paddingHorizontal="32dp"
                    android:paddingVertical="16dp"
                    android:checked="@={sortModel.splitByTime}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorOnPrimary"
                    android:text="@string/separated_by_time"
                    android:id="@+id/separate_switch"
                    android:contentDescription="@string/album"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                app:layout_constraintTop_toBottomOf="@id/switch_container"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

            <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:textAllCaps="false"
                    android:id="@+id/cancel_button"
                    android:text="@string/cancel"/>

            <View
                    android:layout_width="1dp"
                    android:layout_marginVertical="16dp"
                    android:layout_height="match_parent"
                    android:background="@color/gray_500"/>

            <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:textAllCaps="false"
                    android:id="@+id/confirm_button"
                    android:text="@string/confirm"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>