<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
                name="viewModel"
                type="com.example.gallery.main.MainActivityViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIconTint="?attr/colorOnPrimary"
                android:fitsSystemWindows="true"
                android:id="@+id/toolbar"
                android:background="@color/transparent"
                app:title="@string/app_name"
                app:titleTextColor="?attr/colorOnPrimary"
                app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/linear_layout">

            <TextView
                    android:text="@string/music"
                    android:layout_width="match_parent"
                    android:textColor="?attr/colorOnPrimary"
                    android:layout_height="96dp"
                    android:id="@+id/music"
                    android:onClick="toMusic"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:gravity="center"/>

            <TextView
                    android:text="@string/album"
                    android:layout_width="match_parent"
                    android:textColor="?attr/colorOnPrimary"
                    android:layout_height="96dp"
                    android:id="@+id/album"
                    android:onClick="toAlbum"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:gravity="center"/>

            <TextView
                    android:onClick="toVideo"
                    android:text="@string/video"
                    android:layout_width="match_parent"
                    android:textColor="?attr/colorOnPrimary"
                    android:layout_height="96dp"
                    android:id="@+id/video"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:gravity="center"/>

            <TextView
                    android:onClick="toSetting"
                    android:text="@string/setting"
                    android:layout_width="match_parent"
                    android:textColor="?attr/colorOnPrimary"
                    android:layout_height="96dp"
                    android:id="@+id/setting"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:gravity="center"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>