<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="viewModel" type="com.example.gallery.main.state.MainFragmentViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/wallpaper"
                android:layout_width="match_parent"
                android:layout_height="100dp" android:id="@+id/wallpaper"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="150dp" android:textSize="24sp"
                android:textStyle="bold" android:gravity="center"/>
        <TextView
                android:text="@string/music"
                android:onClick="toMusic"
                android:layout_width="match_parent"
                android:layout_height="100dp" android:id="@+id/music"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:textSize="24sp"
                android:textStyle="bold" app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintTop_toBottomOf="@+id/wallpaper" android:gravity="center"/>
        <TextView
                android:text="@string/downloads"
                android:layout_width="match_parent"
                android:layout_height="100dp" android:id="@+id/downloads"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:textSize="24sp"
                android:textStyle="bold" app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintTop_toBottomOf="@+id/music"
                android:gravity="center"/>
        <TextView
                android:text="@string/setting"
                android:layout_width="match_parent"
                android:layout_height="100dp" android:id="@+id/setting"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:textSize="24sp"
                android:textStyle="bold" app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintTop_toBottomOf="@+id/downloads" android:gravity="center"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>